// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`01 - No default theme. 01 - No options at registration. 01 - No extra themes 1`] = `
<div>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 01 - No extra themes 2`] = `
<div>
  <div>
    Child
  </div>
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 02 - Ad hoc theme 1`] = `
<div
  className="theme-a__container___1v_Yt"
>
  <div
    className="theme-a__content___3JWmj"
  >
    Child
  </div>
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 03 - Context theme 1`] = `
<div>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 03 - Context theme 2`] = `
<div
  className="theme-b__container___jN4m7"
>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 03 - Context theme 3`] = `
<div
  className="theme-b__container___jN4m7"
>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 1`] = `
<div>
  <div
    className="theme-c__content___3PCaa"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 2`] = `
<div
  className="theme-b__container___jN4m7"
>
  <div
    className="theme-c__content___3PCaa"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 3`] = `
<div
  className="theme-a__container___1v_Yt"
>
  <div
    className="theme-a__content___3JWmj theme-c__ad___23ou5 theme-c__hoc___1gaeh theme-c__content___3PCaa"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 4`] = `
<div
  className="theme-b__container___jN4m7"
>
  <div
    className="theme-c__content___3PCaa"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 05 - Context + ad hoc + composition modes 1`] = `
<div
  className="theme-b__container___jN4m7"
>
  <div
    className="theme-a__content___3JWmj"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 05 - Context + ad hoc + composition modes 2`] = `
<div
  className="theme-b__container___jN4m7"
>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 05 - Context + ad hoc + composition modes 3`] = `"Invalid composition mode"`;

exports[`02 - With default theme 01 - No options at registration. 01 - No extra themes 1`] = `
<div
  className="theme-a__container___1v_Yt"
>
  <div
    className="theme-a__content___3JWmj"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 01 - No extra themes 2`] = `
<div
  className="theme-a__container___1v_Yt"
>
  <div
    className="theme-a__content___3JWmj"
  >
    Child
  </div>
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 02 - Ad hoc theme 1`] = `
<div
  className="theme-a__container___1v_Yt theme-b__ad___2rMxs theme-b__hoc___1UgFH theme-b__container___jN4m7"
>
  <div
    className="theme-a__content___3JWmj"
  >
    Child
  </div>
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 03 - Context theme 1`] = `
<div
  className="theme-a__container___1v_Yt"
>
  <div
    className="theme-a__content___3JWmj"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 03 - Context theme 2`] = `
<div
  className="theme-a__container___1v_Yt theme-b__context___o0Qp_ theme-b__container___jN4m7"
>
  <div
    className="theme-a__content___3JWmj"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 03 - Context theme 3`] = `
<div
  className="theme-b__container___jN4m7"
>
  <div />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 04 - Context + ad hoc 1`] = `
<div
  className="theme-a__container___1v_Yt"
>
  <div
    className="theme-a__content___3JWmj theme-c__ad___23ou5 theme-c__hoc___1gaeh theme-c__content___3PCaa"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 04 - Context + ad hoc 2`] = `
<div
  className="theme-a__container___1v_Yt theme-b__context___o0Qp_ theme-b__container___jN4m7"
>
  <div
    className="theme-a__content___3JWmj theme-c__ad___23ou5 theme-c__hoc___1gaeh theme-c__content___3PCaa"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 04 - Context + ad hoc 3`] = `
<div
  className="theme-a__container___1v_Yt"
>
  <div
    className="theme-a__content___3JWmj theme-c__context___3QGwC theme-c__content___3PCaa theme-d__ad___29e4V theme-d__hoc___1HmWc theme-d__content___2j9oQ"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 05 - Context + ad hoc + composition modes 1`] = `
<div
  className="theme-a__container___1v_Yt"
>
  <div
    className="theme-c__content___3PCaa theme-a__context___2wfYt theme-a__content___3JWmj theme-d__ad___29e4V theme-d__hoc___1HmWc theme-d__content___2j9oQ"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 05 - Context + ad hoc + composition modes 2`] = `
<div
  className="theme-a__container___1v_Yt"
>
  <div
    className="theme-a__content___3JWmj theme-d__ad___29e4V theme-d__hoc___1HmWc theme-d__content___2j9oQ"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 05 - Context + ad hoc + composition modes 3`] = `
<div>
  <div
    className="theme-c__content___3PCaa theme-d__ad___29e4V theme-d__hoc___1HmWc theme-d__content___2j9oQ"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 06 - Theme props mapping 1`] = `
<div>
  <div />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 06 - Theme props mapping 2`] = `
Object {
  "props": Object {
    "mapThemeProps": [Function],
    "ref": null,
  },
  "theme": Object {
    "ad": "theme-a__ad___3fHS1",
    "container": "theme-a__container___1v_Yt",
    "content": "theme-a__content___3JWmj",
    "context": "theme-a__context___2wfYt",
    "hoc": "theme-a__hoc___1UND_",
  },
}
`;

exports[`02 - With default theme 02 - Options at registration 01 - composeContextTheme 1`] = `
<div
  className="theme-b__container___jN4m7"
>
  <div />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 01 - composeContextTheme 2`] = `
<div
  className="theme-b__container___jN4m7"
>
  <div
    className="theme-a__content___3JWmj"
  />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 02 - composeAdhocTheme 1`] = `
<div
  className="theme-b__container___jN4m7"
>
  <div />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 02 - composeAdhocTheme 2`] = `
<div
  className="theme-b__container___jN4m7"
>
  <div
    className="theme-a__content___3JWmj"
  />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 03 - themePriority 1`] = `
Array [
  <div
    className="theme-b__container___jN4m7 theme-a__context___2wfYt theme-a__container___1v_Yt"
  >
    <div
      className="theme-a__content___3JWmj theme-c__ad___23ou5 theme-c__hoc___1gaeh theme-c__content___3PCaa"
    />
  </div>,
  <div
    className="theme-a__container___1v_Yt theme-b__context___o0Qp_ theme-b__container___jN4m7"
  >
    <div
      className="theme-a__content___3JWmj theme-c__ad___23ou5 theme-c__hoc___1gaeh theme-c__content___3PCaa"
    />
  </div>,
]
`;

exports[`02 - With default theme 02 - Options at registration 04 - Theme props mapping 1`] = `
<div>
  <div />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 04 - Theme props mapping 2`] = `
Object {
  "props": Object {
    "ref": null,
  },
  "theme": Object {
    "ad": "theme-a__ad___3fHS1",
    "container": "theme-a__container___1v_Yt",
    "content": "theme-a__content___3JWmj",
    "context": "theme-a__context___2wfYt",
    "hoc": "theme-a__hoc___1UND_",
  },
}
`;

exports[`02 - With default theme 02 - Options at registration 04 - Theme props mapping 3`] = `
<div
  className="theme-a__container___1v_Yt"
>
  <div
    className="theme-a__content___3JWmj"
  />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 04 - Theme props mapping 4`] = `
Object {
  "props": Object {
    "mapThemeProps": [Function],
    "ref": null,
  },
  "theme": Object {
    "ad": "theme-a__ad___3fHS1",
    "container": "theme-a__container___1v_Yt",
    "content": "theme-a__content___3JWmj",
    "context": "theme-a__context___2wfYt",
    "hoc": "theme-a__hoc___1UND_",
  },
}
`;

exports[`02 - With default theme 02 - Options at registration 05 - Specifity tags 1`] = `
<div
  className="theme-a__container___1v_Yt  theme-b__container___jN4m7"
>
  <div
    className="theme-a__content___3JWmj  theme-c__hoc___1gaeh theme-c__content___3PCaa"
  />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 05 - Specifity tags 2`] = `"Invalid adhoc theme tag"`;
